<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_gamePlayAs"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:text="@string/game_playAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_signO"
        app:layout_constraintTop_toBottomOf="@id/text_gamePlayAs"
        android:backgroundTint="@color/colorDarkGrey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_signX"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textColor="@color/colorTextDark"
        android:text="@string/game_O"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/button_signX"
        app:layout_constraintTop_toBottomOf="@id/text_gamePlayAs"
        android:backgroundTint="@color/colorDarkGrey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_signO"
        android:textColor="@color/colorTextDark"
        android:text="@string/game_X"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="60dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

